--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about us.html">About Us</a></li>
       <li><a href="contact us.html">Contact Us</a></li>
-      <li><a href="login.html">login</a></li>
+      <li><a href="login.html">Login</a></li>
        </ul>
   </nav>
  
