--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, height=device-height , initial-scale=1.0">
-  <title>My School Website</title>
+  <title>Severna Park High School</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image" href="img\amjad icon.png">
+  <link rel="icon" type="image" href="img\logo 1.png">
+ 
 </head>
 <body><div class="all">
 
-    <h1 id="home">Amjad School</h1>
-  <div>
+    <h1 id="home">Severna Park High School</h1>
+  
   <nav>
     <ul >
       <li><a href="index.html">Home</a></li>
@@ -21,7 +22,7 @@
        </ul>
   </nav>
  
-</div>
+<div class="scroll">
 
 <div class="sebit">
   <div class="met7arik">
@@ -50,7 +51,7 @@
       <p>Copyright 2023 My School. All rights reserved.</p>
     </div>
   </footer>
-    
+</div>
    </div>
 </body>
 </html>
