--- a/about us.html
+++ b/about us.html
@@ -20,7 +20,7 @@
  
   <div class="container"> 
     <h1>Empowering students to reach their full potential</h1>
-    <div class="video"> <video width="100%" muted autoplay>
+    <div class="video"> <video width="100%" muted autoplay loop>
     <source src="img\MySchoolVid.mp4" type="video/mp4"></div>
    
     <p>Welcome to Severna Park High School We are a community of learners dedicated to excellence and achievement.</p>
