--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body><div class="all">
 
-    <h1 id="home">Severna Park High School</h1>
-  
+  <h1 id="home">Severna Park High School</h1>
   <nav>
     <ul >
       <li><a href="index.html">Home</a></li>
@@ -21,6 +20,7 @@
       <li><a href="login.html">login</a></li>
        </ul>
   </nav>
+ 
  
 <div class="scroll">
 
@@ -46,12 +46,12 @@
           <li><a href="https://www.youtube.com/"><img src=" img\yt icon.png" alt="Youtube" class="social-media-img" id="yt"></a></li>
         </ul>
       </div>
-    </div>
+    
     <div class="copyright">
       <p>Copyright 2023 My School. All rights reserved.</p>
     </div>
-  </footer>
+  </footer></div>
 </div>
-   </div>
+  
 </body>
 </html>
