--- a/login.html
+++ b/login.html
@@ -21,12 +21,13 @@
     <body>
         <div id="login-box">
             <div class="left">
-                <br><br>
+                <br><br><form action="" method="post">
               <h1>Login</h1>
               <input type="text" name="username" placeholder="Username" />
               <input type="password" name="password" placeholder="Password" />
               <label>New User? <a href="sign up.html">Sign Up</a></label>
              <input type="submit" name="login" value="login" />
+            </form>
 
             </div>
             
