--- a/contact us.html
+++ b/contact us.html
@@ -3,23 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="icon" type="image" href="img\logo 1.png">
     <link rel="stylesheet" href="contact us.css">
 </head>
 <body>
-  <a href="index.html"><img src="img\logo 1.png" alt="Severna Park High School" width="100px"></a>
-   <p>Home</p> 
-  <h2>Contact Form</h2>
+  
+  <h1 id="home">Severna Park High School</h1>
+  
+  <nav>
+    <ul >
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about us.html">About Us</a></li>
+      <li><a href="contact us.html">Contact Us</a></li>
+      <li><a href="login.html">login</a></li>
+       </ul>
+  </nav>
 <div class="container">
+   
   <form action="" method="get">
+    <h2>Contact Form</h2>
     <label>Name</label>
     <input type="text" id="fname" name="name" placeholder="Type your name..">
     <label >Last Name</label>
     <input type="text" id="lname" name="surname" placeholder="Type your last name..">
     <label >E-mail Address</label>
-    <input type="text" id="mail" name="e-mail" placeholder="Type your e-mail..">
+    <input type="email" id="mail" name="e-mail" placeholder="Type your e-mail..">
     <label>Country</label>
     <select id="country" name="country">
       <option value="Aland Islands">Aland Islands</option>
