--- a/contact us.html
+++ b/contact us.html
@@ -7,6 +7,7 @@
     <title>Contact Us</title>
     <link rel="icon" type="image" href="img\logo 1.png">
     <link rel="stylesheet" href="contact us.css">
+    <script src="main.js"></script>
 </head>
 <body>
   
@@ -277,7 +278,7 @@
     </select>
     <label>Message</label>
     <textarea id="message" name="message" placeholder="Type your message.." style="height: 200px"></textarea>
-    <input type="submit" value="Send">
+    <input type="submit" value="Send" onclick="validcontact()">
   </form>
 </div>
     
