--- a/sign up.html
+++ b/sign up.html
@@ -7,19 +7,20 @@
     <title>Sign Up</title>
     <link rel="icon" type="image" href="img\logo 1.png">
     <link rel="stylesheet" href="sign up.css">
+   <script src="main.js"></script>
 </head>
 <body>
     <div id="login-box">
         <div class="left">
-        <form action="" method="post"> <h1>Sign up</h1>
+        <form action="" method="post" ><h1>Sign up</h1>
           
-          <input type="text" name="username" placeholder="Username" />
-          <input type="email" name="email" placeholder="E-mail" />
-          <input type="password" name="password" placeholder="Password" />
-          <input type="password" name="password2" placeholder="Retype password" />
+          <input type="text" id="username" name="username"  placeholder="Username" />
+          <input type="email" id="email" name="email" placeholder="E-mail" />
+          <input type="password" id="password" name="password" placeholder="Password" />
+          <input type="password" id="password2" name="password2" placeholder="Retype password" />
           <label for="m">M<input type="radio" name="gender"></label>
           <label for="f">F<input type="radio" name="gender"></label><br>
-          <input type="submit" name="signup_submit" value="Sign me up" />
+          <input type="submit" name="signup_submit" value="Sign me up" onclick="validSign()"/>
         </div></form> 
         
         <div class="right">
